--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-PORT=3000
+PORT=4000
+DB_CNN=mongodb+srv://paco:GdKerte6AR11RRxn@calendar-db.zvmwuco.mongodb.net/mern_calendar
+SECRET_JWT_SEED = Esto-es-uNa-PaLab@_SekretA
